@@ -1,24 +1,22 @@
 package com.awslabs.iot.client.commands.generic;
 
-import com.awslabs.general.helpers.interfaces.IoHelper;
+
 import com.awslabs.iot.client.commands.CommandHandlerProvider;
 import com.awslabs.iot.client.commands.interfaces.CommandHandler;
 import com.awslabs.iot.client.helpers.ANSIHelper;
 import com.awslabs.iot.client.parameters.interfaces.ParameterExtractor;
 import com.jcabi.log.Logger;
+import io.vavr.collection.List;
+import io.vavr.collection.Stream;
 
 import javax.inject.Inject;
 import javax.inject.Provider;
 import java.util.Comparator;
-import java.util.List;
-import java.util.stream.Collectors;
 
 public class HelpCommandHandler implements CommandHandler {
     private static final String HELP = "help";
     @Inject
     Provider<CommandHandlerProvider> commandHandlerProviderProvider;
-    @Inject
-    IoHelper ioHelper;
     @Inject
     ParameterExtractor parameterExtractor;
 
@@ -32,10 +30,10 @@ public class HelpCommandHandler implements CommandHandler {
 
         stringBuilder.append(ANSIHelper.CRLF);
 
-        List<CommandHandler> sortedCommandHandlers = commandHandlerProviderProvider.get()
-                .getCommandHandlerSet().stream()
+        List<CommandHandler> sortedCommandHandlers = Stream.ofAll(commandHandlerProviderProvider.get()
+                .getCommandHandlerSet())
                 .sorted(Comparator.comparing(CommandHandler::getFullCommandString))
-                .collect(Collectors.toList());
+                .toList();
 
         for (CommandHandler commandHandler : sortedCommandHandlers) {
             stringBuilder.append(ANSIHelper.BOLD);
@@ -62,10 +60,6 @@ public class HelpCommandHandler implements CommandHandler {
     @Override
     public int requiredParameters() {
         return 0;
-    }
-
-    public IoHelper getIoHelper() {
-        return this.ioHelper;
     }
 
     public ParameterExtractor getParameterExtractor() {
